@@ -131,6 +131,7 @@ Version 0.0.4b (in progress)
 * [Tested] No apparent issues while running on nginx.
 * [Fixed] Default sort limit reduced on error logs.
 * [Fixed] Incorrect team names on wildcard standings page.
+* [Added] Error logs now honour maxdays and maxrows configuration.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
